src/test/ui/regions/regions-outlives-projection-container-wc.nll.stderr
error: lifetime may not live long enough
  --> $DIR/regions-outlives-projection-container-wc.rs:33:12
   |
LL | fn with_assoc<'a,'b>() {
   |               -- -- lifetime `'b` defined here
   |               |
   |               lifetime `'a` defined here
...
LL |     let _: &'a WithAssoc<TheType<'b>> = loop { };
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'b` must outlive `'a`

help: the following changes may resolve your lifetime errors
   |
   = help: add bound `'b: 'a`

error: aborting due to previous error

